# ZX16-ISS-G3

./: .gitignore  .gitmodules  README.md  package-lock.json  pong.s
.github/workflows/: deploy.yml
QT/: CMakeLists.txt  cpu.cpp  cpu.h  disassembler.cpp  disassembler.h  main.cpp  qml.qrc
QT/qml/: Editor.qml  Main.qml  SideMenu.qml  sidemenu.qmodel
tests/: TC-ZX16-01.expected  TC-ZX16-01.s  TC-ZX16-02.expected  TC-ZX16-02.s  TC-ZX16-03.expected  TC-ZX16-03.s  TC-ZX16-04.expected  TC-ZX16-04.s  TC-ZX16-05.expected  TC-ZX16-05.s  TC-ZX16-06.expected  TC-ZX16-06.s  TC-ZX16-07.expected  TC-ZX16-07.s  TC-ZX16-08.expected  TC-ZX16-08.s  TC-ZX16-09.expected  TC-ZX16-09.s  TC-ZX16-10.expected  TC-ZX16-10.s
z16-sim/: next.config.ts  package-lock.json  package.json  postcss.config.ts  ss.txt  tsconfig.json  vercel.json
z16-sim/app/: globals.css  layout.tsx  page.tsx
z16-sim/app/_components/: CodeEditor.tsx  Editor.tsx  Grid.tsx  NavBar.tsx  Panel.tsx  Report.tsx  Side-Menu.tsx  TextUpload.tsx  WhatsNew.tsx  codewindow.tsx  computer.tsx  convertor.tsx  custom-dialog.tsx  registerTable.tsx  screen.tsx  terminal.tsx
z16-sim/app/assembler/: page.tsx
z16-sim/app/memory/: page.tsx
z16-sim/components/: Tabs.tsx
z16-sim/hooks/: use-cpu.ts
z16-sim/lib/: BufferContext.tsx  Definitions.ts  MemoryContext.tsx  constants.ts  cpu.ts  disassembler.ts  env.ts  utils.ts  worker.ts
z16-sim/scripts/: constants.py  definitions.py  error_handler.py  first_pass.py  main.py  second_pass.py  tokenizer.py  utils.py
z16-sim/types/: Definitions.ts  env.d.ts
(+8 files in other folders)
